--- a/DB/src/sample/Menu.fxml
+++ b/DB/src/sample/Menu.fxml
@@ -85,7 +85,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="541.0" layoutY="402.0" text="numbers">
+      <Label layoutX="541.0" layoutY="402.0" text="number">
          <font>
             <Font size="24.0" />
          </font>
@@ -95,7 +95,7 @@
             <Font size="22.0" />
          </font>
       </Label>
-      <Label layoutX="549.0" layoutY="460.0" text="numbers">
+      <Label layoutX="549.0" layoutY="460.0" text="number">
          <font>
             <Font size="24.0" />
          </font>
