--- a/DB/src/sample/Insert.fxml
+++ b/DB/src/sample/Insert.fxml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Insertion">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Insertion">
   <children>
     <MenuBar prefHeight="25.0" prefWidth="705.0" VBox.vgrow="NEVER">
       <menus>
@@ -85,12 +76,12 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Button fx:id="back_butt" layoutX="547.0" layoutY="330.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="79.0" text="Back">
+            <Button fx:id="back_butt" layoutX="547.0" layoutY="330.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="79.0" text="Back">
                <font>
                   <Font name="Calisto MT Bold" size="17.0" />
                </font>
             </Button>
-            <Button fx:id="book_butt" layoutX="237.0" layoutY="306.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="131.0" text=" Book Seats">
+            <Button fx:id="book_butt" layoutX="237.0" layoutY="306.0" mnemonicParsing="false" onAction="#insert" prefHeight="48.0" prefWidth="131.0" text=" Book Seats">
                <font>
                   <Font name="Calisto MT Bold" size="17.0" />
                </font>
