--- a/DB/src/sample/booking.fxml
+++ b/DB/src/sample/booking.fxml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Booking">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Booking">
    <children>
       <AnchorPane prefHeight="400.0" prefWidth="600.0">
          <children>
@@ -41,7 +38,7 @@
                   <Font name="System Bold" size="31.0" />
                </font>
             </Label>
-            <Button layoutX="329.0" layoutY="340.0" mnemonicParsing="false" onAction="#back" prefHeight="36.0" prefWidth="110.0" text="Back">
+            <Button layoutX="329.0" layoutY="340.0" mnemonicParsing="false" onAction="#Back" prefHeight="36.0" prefWidth="110.0" text="Back">
                <font>
                   <Font size="13.0" />
                </font>
