--- a/DB/src/sample/Insert.fxml
+++ b/DB/src/sample/Insert.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Insertion">
+<VBox prefHeight="430.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Insertion">
   <children>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="375.0" prefWidth="640.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="424.0" prefWidth="666.0" VBox.vgrow="ALWAYS">
          <children>
             <TextField fx:id="cnic" layoutX="327.0" layoutY="125.0" prefHeight="25.0" prefWidth="157.0" promptText="45XXXXXXXXXXX" />
             <DatePicker fx:id="date_id" layoutX="327.0" layoutY="174.0" prefHeight="25.0" prefWidth="157.0" />
@@ -37,12 +42,12 @@
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <Button fx:id="back_butt" layoutX="547.0" layoutY="330.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="79.0" text="Back">
+            <Button fx:id="back_butt" layoutX="547.0" layoutY="369.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="79.0" text="Back">
                <font>
                   <Font name="Calisto MT Bold" size="17.0" />
                </font>
             </Button>
-            <Button fx:id="book_butt" layoutX="243.0" layoutY="329.0" mnemonicParsing="false" onAction="#insert" prefHeight="48.0" prefWidth="131.0" text=" Book Seats">
+            <Button fx:id="book_butt" layoutX="243.0" layoutY="368.0" mnemonicParsing="false" onAction="#insert" prefHeight="48.0" prefWidth="131.0" text=" Book Seats">
                <font>
                   <Font name="Calisto MT Bold" size="17.0" />
                </font>
@@ -51,6 +56,12 @@
             <Label layoutX="218.0" layoutY="20.0" text="Registration Form">
                <font>
                   <Font name="Wingdings 2" size="22.0" />
+               </font>
+            </Label>
+            <ComboBox fx:id="time" editable="true" layoutX="330.0" layoutY="321.0" prefWidth="150.0" promptText="None" />
+            <Label layoutX="180.0" layoutY="320.0" text="Time">
+               <font>
+                  <Font name="System Bold" size="18.0" />
                </font>
             </Label>
          </children>
