--- a/DB/src/sample/Menu.fxml
+++ b/DB/src/sample/Menu.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -97,5 +100,13 @@
             <Font size="28.0" />
          </font>
       </Label>
+      <LineChart fx:id="LineChart" layoutX="921.0" layoutY="228.0" prefHeight="299.0" prefWidth="337.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" fx:id="x" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis fx:id="y" side="LEFT" />
+        </yAxis>
+      </LineChart>
    </children>
 </AnchorPane>
