--- a/DB/src/sample/Login.fxml
+++ b/DB/src/sample/Login.fxml
@@ -18,7 +18,7 @@
          <children>
             <ImageView fx:id="image" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="file:/D:/CS%20IBA/Semester%204/DBMS/Project/Git_Prok/DB_project/DB/src/images/daweoon.png" />
+                  <Image url="@../images/daweoon.png" />
                </image>
             </ImageView>
             <Label text="Welcome To" textFill="WHITE">
@@ -66,7 +66,7 @@
             </Button>
             <ImageView fitHeight="110.0" fitWidth="139.0" layoutX="44.0" layoutY="31.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="file:/D:/CS%20IBA/Semester%204/DBMS/Project/Git_Prok/DB_project/DB/src/images/dawl.png" />
+                  <Image url="@../images/dawl.png" />
                </image>
             </ImageView>
             <Label layoutX="53.0" layoutY="141.0" text="Welcome Back" textFill="TEAL">
