Alot of changes made in dashboard and menu and booking,insertion

--- a/DB/src/sample/dashboard.css
+++ b/DB/src/sample/dashboard.css
@@ -32,3 +32,9 @@
 .backbtn:hover{
     -fx-fill: teal;
 }*/
+.btns{
+    -fx-background-color: transparent;
+}
+.btns:hover{
+    -fx-background-color: #202332;
+}   
